--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "node-sass": "^9.0.0",
     "pinia": "^2.1.4",
     "sass": "^1.63.6",
@@ -17,6 +18,7 @@
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@vitejs/plugin-vue": "^4.2.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.0",
