--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "aos": "^2.3.4",
+    "axios": "^1.4.0",
     "node-sass": "^9.0.0",
     "pinia": "^2.1.4",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
+    "sweetalert": "^2.1.2",
+    "v-wow": "github:guisoares2011/vue-wow",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue-wow": "^1.2.0"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
